# Softwareentwicklung-2021

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  source.cpp
doc/: Hittable.plantuml  Material.plantuml  Raytracing-Activity.plantuml
example-PR/: marius.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Hittable.h  Hittables.cpp  Hittables.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
test/: CMakeLists.txt  Vec3Tests.cpp
